update code to new java and jib plugoin